# MoriyaShrine

./: .gitignore  README.md  dependencies.txt
ComputerVision/: make-dlib.sh
ComputerVision/Data/: training_goose.xml
ComputerVision/Model/: CMakeLists.txt  compile.txt  dnn_mmod_ex.cpp  dnn_mmod_face_detection_ex.cpp  dnn_mmod_goose_detection_ex.cpp  std_test.txt
ComputerVision/Prelim/: csv2xml.py  test_conv.py  test_conv_from_weights.py
ComputerVision/Python/: csv2xml.py
Old/Model/: compile.sh  run.sh  std_test.txt
docs/: docs.txt  image.txt  logging.txt  main.txt  other.txt  testing.txt
old/Data/: training_goose.xml
old/Model/: CMakeLists.txt  dnn_mmod_ex.cpp  dnn_mmod_goose_detection_ex.cpp
old/Python/: test_conv.py  test_conv_from_weights.py  test_conv_from_weights_goose.py  test_conv_goose.py
src/: Image.cpp  Image.h  ImageTest.cpp  Interface.cpp  Main.cpp  MountainOfFaith.sh  cmake-compile.sh  dnn_mmod_face_detection_ex.cpp  gcc-compile.sh  image.cpp  image.h  logfile.txt  makefile  output.txt  run.sh  std.txt  xCompile.sh
src/utils/: CMakeLists.txt  gcc-compile-test.sh
test/: Image.cpp  ImageTest.cpp
