cmake_minimum_required(VERSION 2.8.12)
project(model)
include(../../External/dlib-19.7/dlib/cmake)
add_executable(dnn_mmod_face_detection_ex dnn_mmod_face_detection_ex.cpp)
add_executable(dnn_mmod_goose_detection_ex dnn_mmod_goose_detection_ex.cpp)
add_executable(dnn_mmod_ex dnn_mmod_ex.cpp)
target_link_libraries(dnn_mmod_face_detection_ex dlib)
target_link_libraries(dnn_mmod_goose_detection_ex dlib)
target_link_libraries(dnn_mmod_ex dlib)
target_compile_features(model PRIVATE cxx_std_14)
